Properly search executable